--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 
-	<title>My Portfolio</title>
+	<title>About Me</title>
+	
+	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive980.css" media="screen and (max-width: 980px)">
 	<link rel="stylesheet" type="text/css" href="css/responsive768.css" media="screen and (max-width: 768px)">
 	<link rel="stylesheet" type="text/css" href="css/responsive640.css" media="screen and (max-width: 640px)">
 </head>
-<body>
 
+<body>
 	<header>
 		<div id="headerContainer">
 			<h1 id="myName">John Joyce</h1>
@@ -24,40 +27,18 @@
 	</header>
 	
 	<br><br>
-	
 	<div>
-	<div id="mainBox">
-		<h1 class="heading">My Portfolio</h1>
-		<div id="divider"></div>
-		<div>
+		<div id="mainBox">
+			<h1 class="heading">About Me</h1>
+			<div id="divider"></div>
 			<div>
-				<div class="portfolioBox">
-					<img class="portfolioImg" src="assets/Waddle_Dee.png">
-					<p class="portfolioLabel">Hangman</p>
-				</div>
-				<div class="portfolioBox">
-					<img class="portfolioImg" src="assets/Bandana_Dee.png">
-					<p class="portfolioLabel">RPG Game</p>
-				</div>
-			</div>
-			<div>
-				<div class="portfolioBox">
-					<img class="portfolioImg" src="assets/Walker_Waddle_Dee.png">
-					<p class="portfolioLabel">Trivia Game</p>
-				</div>
-				<div class="portfolioBox">
-					<img class="portfolioImg" src="assets/Waddle_Dee_(Kirby_Triple_Deluxe).png">
-					<p class="portfolioLabel">Rutgers Info Widget</p>
-				</div>
-			</div>
-			<div>
-				<div class="portfolioBox">
-					<img class="portfolioImg" src="assets/Parasol_Waddle_Dee.png">
-					<p class="portfolioLabel">Rock Paper Scissors</p>
-				</div>
+				<img id="aboutMeImg" src="assets/Hardhat Waddle Dee.png">
+				<p id="boxText">
+				Hello, there! I'm John, a student of the Rutgers Coding Bootcamp studying Web Development! I've been learning about coding for a few years now. I've learned programming languages like Java, C++, Python, and a bit of C#. I'm looking to expand my knowledge and finally turn my hobby into a profession!
+				</p>
 			</div>
 		</div>
-	</div>
+		
 		<div id="connections">
 			<h3 class="heading">Connect with Me</h3>
 			<div id="divider"></div>
